--- a/stylee.css
+++ b/stylee.css
@@ -770,7 +770,8 @@ main {
   .aaa {
     margin-top: 3rem;
     width: 90%;
-    height: 72%;
+    height: 67%;
+    transform: scale(1.3);
   }
   .max-width {
     padding: 0 45px;
@@ -786,5 +787,9 @@ main {
   }
   .title::after {
     bottom: -39px;
+  }
+  .skills-img2 {
+    padding: 4rem 0;
+    transform: scale(1.7);
   }
 }
