--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html {
   border-radius: 53%;
   width: 86px;
   height: 86px;
-  animation: spin 0.4s linear infinite;
+  animation: spin 0.5s linear infinite;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -55,7 +55,7 @@ html {
 :root {
   --bg-dark: #100f0f;
   --color-putih: rgb(235, 243, 255);
-  --color-kuning: #1b0e96;
+  --color-kuning: #1909ab;
   --color-secondary: #080707;
   --color-aan: #2c394b;
   --color-away: #334756;
@@ -269,6 +269,24 @@ section .title::after {
 .about-text h2 {
   font-size: 2rem;
 }
+.img-a {
+  position: relative;
+  border: 2px solid var(--color-putih);
+  transition: all 0.3s ease-in-out;
+}
+.img-b {
+  position: absolute;
+  bottom: -10px;
+  right: -20px;
+  border: 2px solid var(--color-putih);
+  transition: all 0.3s ease-in-out;
+}
+.img-a:hover,
+.img-b:hover {
+  transform: scale(1.05);
+  -webkit-filter: grayscale(0.8);
+  filter: grayscale(0.8);
+}
 .about-img {
   transform: scale(0.7);
 }
@@ -441,8 +459,7 @@ section .title::after {
   background-image: url("path-to-image.jpg");
   background-size: cover;
   background-position: center;
-
-  transition: all 0.4s ease 0s;
+  transition: 0.4s ease-in-out 0s;
 }
 
 .project-image,
@@ -454,6 +471,7 @@ section .title::after {
   transform: scale(1.05);
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
+  border: 1.3px solid var(--color-putih);
 }
 
 .project-description {
@@ -579,6 +597,7 @@ section .title::after {
   font-weight: 200;
 }
 /* .certificate */
+
 .certificate .title {
   position: relative;
   text-align: center;
@@ -590,8 +609,8 @@ section .title::after {
   color: var(--color-putih);
   border-bottom: 2px solid transparent; /* set initial border to be transparent */
   transition: border-bottom-color 0.3s ease-in-out; /* add transition effect */
-  padding-top: 15px;
   padding: 0;
+  margin-bottom: 4rem;
 }
 .certificate .title:hover {
   border-bottom-color: var(--color-putih);
@@ -609,12 +628,10 @@ section .title::after {
   font-family: "Inter";
 }
 .certificate-img {
-  position: relative;
+  margin: 9rem 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-content: space-evenly;
-
-  margin-top: 4rem;
 }
 .certificate-img img {
   transform: scale(0.9);
@@ -627,6 +644,101 @@ section .title::after {
   opacity: 0.6;
   transform: scale(1.1);
 }
+/* testimonial */
+.testimonial {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 65vw;
+  max-width: 650px;
+  padding: 50px 30px 50px 20px;
+  background: var(--color-secondary);
+  border-radius: 24px;
+  margin: auto;
+  border: 3px solid var(--color-putih);
+}
+
+.card img {
+  max-width: 280px;
+  width: 17vw;
+  height: 210px;
+  object-fit: cover;
+  margin-left: -60px;
+  margin-right: 30px;
+  border-radius: inherit;
+  box-shadow: 0 60px 40px rgb(0 0 0 / 8%);
+  transition: all 0.4s ease 0s;
+}
+
+.card img:hover {
+  transform: translateX(2.9rem);
+}
+
+.testimonial-text {
+  margin-left: 2rem;
+}
+.card h2 {
+  font-size: 19px;
+  color: var(--color-putih);
+  margin-right: 30px;
+  margin-bottom: 5px;
+}
+
+.card h3 {
+  font-family: "Quicksand";
+  font-size: 14px;
+  font-weight: 200;
+  color: var(--color-putih);
+  margin: 10px 0;
+}
+
+.card p {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--color-putih);
+  margin: 10px 0;
+}
+
+.card button {
+  border: 0;
+  background: var(--color-kuning);
+  color: #f8f8f8;
+  font-family: inherit;
+  padding: 16px 26px;
+  font-size: 16px;
+  border-radius: 40px;
+  margin: 10px 0;
+}
+
+@media screen and (max-width: 740px) {
+  .card {
+    margin: 0 40px;
+    padding-left: 50px;
+    padding-right: 50px;
+    width: 100%;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .card h2 {
+    margin-right: 0;
+    font-size: 26px;
+  }
+
+  .card img {
+    margin: -100px 0 30px 0;
+    width: 100%;
+    max-width: 1000px;
+  }
+}
+
 /* contact section styling */
 .contact-item {
   padding: 2rem 5rem;
@@ -677,7 +789,7 @@ section .title::after {
 .contact .contact-content .left p {
   text-align: justify;
   font-family: "Inter";
-  font-size: 20px;
+  font-size: 16px;
   color: var(--color-putih);
 }
 .contact .contact-content .left .icons {
