--- a/style.css
+++ b/style.css
@@ -11,40 +11,33 @@
 }
 html {
   scroll-behavior: smooth;
-  background: var(--bg-dark);
+  background: var(--bg-secondary);
 }
 /* preloader */
-#preloader {
+.preloader {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--bg-dark);
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
   z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.loader {
-  border-left: 6px solid var(--color-kuning);
-  border-top: 6px solid var(--color-kuning);
-  border-bottom: 6px solid var(--bg-dark);
-  border-right: 6px solid var(--color-kuning);
-  border-radius: 53%;
-  width: 86px;
-  height: 86px;
-  animation: spin 0.5s linear infinite;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -60px 0 0 -60px;
+.preloader-text {
+  font-family: "Quicksand";
+  font-size: 33px;
+  font-weight: 400;
+  color: #fff;
+  animation: blink 1s infinite;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
+@keyframes blink {
+  50% {
+    opacity: 0.01;
   }
 }
 
@@ -187,9 +180,16 @@ section .title::after {
   color: var(--color-putih);
   transition: all 0.6s ease 0s;
 }
+.home .home-content .text-2 span {
+  color: var(--color-putih);
+  transition: all 1s ease 0s;
+}
 .home .home-content .text-2 h3:hover {
   transform: scale(1.04);
   letter-spacing: 5px;
+}
+.home .home-content .text-2 span:hover {
+  letter-spacing: 13px;
 }
 .home .home-content .text-3 {
   font-size: 27px;
@@ -442,6 +442,7 @@ section .title::after {
   transform: scale(1.05);
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
+  border: 1px solid var(--color-putih);
 }
 /* project section styling */
 .project-container {
@@ -662,7 +663,7 @@ section .title::after {
   background: var(--color-secondary);
   border-radius: 24px;
   margin: auto;
-  border: 3px solid var(--color-putih);
+  border: 2.2px solid var(--color-putih);
 }
 
 .card img {
@@ -675,6 +676,7 @@ section .title::after {
   border-radius: inherit;
   box-shadow: 0 60px 40px rgb(0 0 0 / 8%);
   transition: all 0.4s ease 0s;
+  border: 1px solid var(--color-putih);
 }
 
 .card img:hover {
