--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html {
   --bg-dark: #100f0f;
   --color-putih: rgb(235, 243, 255);
   --color-kuning: #1909ab;
-  --color-secondary: #090d25;
+  --color-secondary: #040612;
   --color-aan: #2c394b;
   --color-away: #334756;
 }
