--- a/style.css
+++ b/style.css
@@ -14,31 +14,108 @@ html {
   background: var(--bg-secondary);
 }
 /* preloader */
-.preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000000;
-  z-index: 9999;
+.center-body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100vh;
+  /****** center box
+	width: 300px;
+	height: 300px;
+	border: solid 1px #aaa;
+	******/
 }
-
-.preloader-text {
-  font-family: "Inter";
-  font-size: 36px;
-  font-weight: 700;
-  color: #fff;
-  animation: blink 2.5s infinite;
-  border-bottom: 1px solid white;
+body {
+  background-color: #202628;
 }
-
-@keyframes blink {
+.loader-circle-64 {
+  width: 50px;
+  transform-origin: 50% 50%;
+  overflow: visible;
+}
+.loader-circle-64 .crc,
+.loader-circle-64 .points {
+  transform-box: fill-box;
+  transform-origin: 50% 50%;
+}
+.loader-circle-64 .ci1 {
+  fill: #03182d;
+  animation: loader-circle-64-toBig 3s infinite -1.5s;
+}
+.loader-circle-64 .c1 {
+  animation: loader-circle-64-breath 3s infinite;
+}
+.loader-circle-64 .ci2 {
+  fill: #1a2a3a;
+  animation: loader-circle-64-toBig2 3s infinite;
+}
+.loader-circle-64 .points {
+  animation: loader-circle-64-rot 3s infinite;
+}
+@keyframes loader-circle-64-rot {
+  0% {
+    transform: rotate(0deg);
+  }
+  30% {
+    transform: rotate(360deg);
+  }
   50% {
-    opacity: 0.02;
+    transform: rotate(360deg);
+  }
+  80% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes loader-circle-64-toBig {
+  0% {
+    transform: scale(1) translateX(0px);
+  }
+  30% {
+    transform: scale(1) translateX(0px);
+  }
+  50% {
+    transform: scale(10) translateX(-4.5px);
+  }
+  80% {
+    transform: scale(10) translateX(-4.5px);
+  }
+  100% {
+    transform: scale(1) translateX(0px);
+  }
+}
+@keyframes loader-circle-64-toBig2 {
+  0% {
+    transform: scale(1) translateX(0px);
+  }
+  30% {
+    transform: scale(1) translateX(0px);
+  }
+  50% {
+    transform: scale(10) translateX(4.5px);
+  }
+  80% {
+    transform: scale(10) translateX(4.5px);
+  }
+  100% {
+    transform: scale(1) translateX(0px);
+  }
+}
+@keyframes loader-circle-64-breath {
+  15% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1.1);
+  }
+  65% {
+    transform: scale(1);
+  }
+  90% {
+    transform: scale(1.1);
   }
 }
 
