--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*  import google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&family=Inter:wght@200;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@200;400;600;700&family=Quicksand:wght@200;400;700&display=swap");
-@import url("https://fonts.cdnfonts.com/css/baskerville");
+@import url("https://fonts.cdnfonts.com/css/general-sans");
 @import url("https://fonts.googleapis.com/css?family=Lato : 300, 400, 700");
 
 * {
@@ -197,13 +197,14 @@ section .title::after {
   color: #fff;
   font-size: 25px;
   font-weight: 300;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
 }
 .navbar .logo span {
   font-size: 35px;
   font-weight: bold;
   border-radius: 15px;
   padding: 8px 0;
+  letter-spacing: 2px;
 }
 .navbar.sticky .logo a span {
   color: #fff;
@@ -280,10 +281,10 @@ section .title::after {
 .home .home-content .text-3 {
   font-size: 30px;
   margin: 9px 0;
+  font-weight: bold;
 }
 .home .home-content .text-3 span {
   color: white;
-  font-weight: bold;
   color: var(--color-kuning);
 }
 .cv {
@@ -465,6 +466,23 @@ section .title::after {
   transform: translate(0, 5%);
 }
 
+/* scroll down text */
+.con {
+  margin: 6rem auto 15rem auto;
+}
+.con-con {
+  width: 100%;
+  background-color: white;
+}
+
+.con-con h1 {
+  text-align: center;
+  font-family: "General Sans";
+  font-weight: lighter;
+  padding: 1rem;
+  letter-spacing: 7px;
+}
+
 /* interest section styling  */
 .carousell {
   margin-top: 25vh;
@@ -497,10 +515,11 @@ section .title::after {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: grayscale(0.7);
 }
 #image-carousel {
-  width: 60%;
-  height: 60%;
+  width: 68%;
+  height: 68%;
   margin: 0 auto;
 }
 .carousel-title {
@@ -1318,6 +1337,10 @@ main {
   .about-text p {
     text-align: justify;
     margin: 0 2rem;
+  }
+  #image-carousel {
+    width: 30%;
+    height: 30%;
   }
   .social {
     margin-top: 1rem;
