--- a/style.css
+++ b/style.css
@@ -685,12 +685,12 @@ section .title::after {
   max-width: 100%;
   height: auto;
   transition: all 0.3s ease-in-out;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
 }
 .img-skil:hover {
   transform: scale(1.05);
-  -webkit-filter: sepia(0.7);
-  filter: sepia(0.7);
-  border: 1px solid var(--color-putih);
+  filter: none;
 }
 /* project section styling */
 .project-container {
@@ -889,7 +889,7 @@ section .title::after {
   transition: 0.3s ease;
 }
 .certificate-img img:hover {
-  opacity: 0.6;
+  opacity: 0.8;
   transform: scale(1.1);
 }
 /* testimonial */
